@@ -55,13 +55,12 @@
 ;; TODO:: replace-program and the saving/storing of lfun closure values.
 ;; TODO:: Is this desirable anyway?
               
-(Project-Version lpmud 3-3 371)
-(Parent-Version lpmud 3-3 370)
-(Version-Log "Corrected the saving/restoring of shared closures.
-Corrected the compilation of inline closure contexts.")
+(Project-Version lpmud 3-3 372)
+(Parent-Version lpmud 3-3 371)
+(Version-Log "Included #pragma xxx_types is no longer restricted to the include file's scope.")
 (New-Version-Log
 "")
-(Checkin-Time "Fri, 24 Jan 2003 14:50:04 -0700")
+(Checkin-Time "Fri, 24 Jan 2003 22:54:37 -0700")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -98,7 +97,7 @@ Corrected the compilation of inline closure contexts.")
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.8 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.57 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.434 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.435 644))
   (HISTORY (lpmud/f/49_HISTORY 1.297 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.19 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -188,7 +187,7 @@ Corrected the compilation of inline closure contexts.")
   (src/interpret.h (lpmud/b/13_interpret. 1.33.1.35 644))
   (src/interpret.c (lpmud/b/14_interpret. 1.125.1.103.1.54.1.14 644))
   (src/lex.h (lpmud/b/11_lex.h 1.16.1.15.1.3 644))
-  (src/lex.c (lpmud/b/12_lex.c 1.62.1.71.1.43 644))
+  (src/lex.c (lpmud/b/12_lex.c 1.62.1.71.1.44 644))
   (src/main.h (lpmud/f/31_main.h 1.14.1.4.1.12 644))
   (src/main.c (lpmud/b/8_main.c 1.60.1.43.1.32 644))
   (src/mapping.h (lpmud/f/30_mapping.h 1.12.1.14 644))
